--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,6 @@
     <title>Anti-scatter</title>
   </head>
   <body>
-    <h1>hello!</h1>
+    <h1>Insert the project here!!</h1>
   </body>
 </html>
