files for content script set up

--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anti-scatter</title>
+    <title>Anti-scatter popup</title>
   </head>
   <body>
-    <h1>Insert the project here!!</h1>
+    <h1>Current Website URL Logger</h1>
+    <button id="logButton">Log Current URL</button>
+    <script src="popup.js"></script>
   </body>
 </html>
