--- a/popup.html
+++ b/popup.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anti-scatter popup</title>
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <h1>Current Website URL Logger</h1>
-    <button id="logButton">Log Current URL</button>
+    <h1>Quick block</h1>
+    <div class="button-container">
+      <button id="unblock">Unblock</button>
+      <button id="logButton">Block</button>
+    </div>
+
     <script src="popup.js"></script>
   </body>
 </html>
