--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,6 @@
       <button id="logButton">Block</button>
     </div>
 
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
   </body>
 </html>
