deleted extra react app for extension
A google extension app could be extended from existing react web page app

--- a/client/anti-scatter/public/popup/popup.html
+++ b/client/anti-scatter/public/popup/popup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Extension Popup</title>
+    <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
     <h1>Click the button to redirect:</h1>
