--- a/client-extension/public/popup/Home/homePage.html
+++ b/client-extension/public/popup/Home/homePage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Extension Home Page</title>
+    <link rel="stylesheet" href="homePage.css" />
 </head>
 <body>
     <h1>Welcome to Your Extension</h1>
