--- a/client-extension/public/popup/Loggedout/loggedOut.html
+++ b/client-extension/public/popup/Loggedout/loggedOut.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Logged Out</title>
+    <link rel="stylesheet" href="loggedOut.css" />
 </head>
 <body>
     <h1>You are not logged in</h1>
