--- a/client-extension/public/popup/Loggedout/loggedOut.html
+++ b/client-extension/public/popup/Loggedout/loggedOut.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Logged Out</title>
     <link rel="stylesheet" href="loggedOut.css" />
-</head>
-<body>
+  </head>
+  <body>
     <h1>You are not logged in</h1>
     <p>Please click the button below to log in:</p>
     <button id="loginButton">Log In</button>
-
+    <button id="beans">beans</button>
     <!-- Include an external JavaScript file -->
     <script src="loggedOut.js"></script>
-</body>
+  </body>
 </html>
