Update quickblock.html and quickblock.js

--- a/client-extension/public/popup/quickblock/quickblock.html
+++ b/client-extension/public/popup/quickblock/quickblock.html
@@ -10,12 +10,12 @@
     <body>
         <script type="module" src="quickblock.js"></script>
         <!-- <script src="background.js"></script> -->
-        <h1>Quick block</h1>
-        <div class="button-container">
+        <!-- <h1>Quick block</h1> -->
+        <!-- <div class="button-container">
         <button id="unblock">Unblock</button>
         <button id="block">Block</button>
         <button id="clear">Clear all</button>
-        </div>
+        </div> -->
         <div class="site-container">
         <p>Blocked sites:</p>
         <ul id="blocked-sites"></ul>
